--- a/app/views/shared/_header_wrapper.html.haml
+++ b/app/views/shared/_header_wrapper.html.haml
@@ -2,8 +2,9 @@
 = render :partial => "shared/flash_notice"
 - if class_name.nil?
   #content_header_wrapper{ :class => "#{class_name}" }
-    %h2!= title
-    = body
+    %h2
+      != title
+      = body
 - else
   #content_header_wrapper{ :class => "#{class_name}" }
     %h2!= title
