--- a/app/views/layouts/admin/_welcome.html.haml
+++ b/app/views/layouts/admin/_welcome.html.haml
@@ -1,12 +1,17 @@
 #welcome
-  %ul
+  %ul.nav.pull-right
+    %li.hidden.divider-vertical
     %li
-      %i Howdy, 
-      = link_to current_admin_user.full_name, edit_admin_user_path(current_admin_user)
+      %i.bootstrap_hidden Howdy, 
+      = link_to edit_admin_user_path(current_admin_user) do 
+        %i.hidden.icon-user
+        = current_admin_user.full_name
+    %li.hidden.divider-vertical
     %li
-      %span.menu_separator &#124;
+      %span.menu_separator.bootstrap_hidden &#124;
       = link_to "View Site", cms_html_path, :target => "_blank", :class => 'view_site'
+    %li.hidden.divider-vertical
     %li 
-      %span.menu_separator &#124;
+      %span.menu_separator.bootstrap_hidden &#124;
       = link_to "Logout", destroy_admin_user_session_path, :method => :delete, :class => 'logout'
-
+    %li.hidden.divider-vertical
