--- a/app/views/shared/_header_button_new.html.haml
+++ b/app/views/shared/_header_button_new.html.haml
@@ -1,2 +1,2 @@
-%div{:id => "new_#{class_name}", :class => "create"}
-  = link_to "New #{title}", [:new, :admin, class_name.to_sym], :class => "action create"
+%div{:id => "new_#{class_name}", :class => "create pull-right"}
+  = link_to "New #{title}", [:new, :admin, class_name.to_sym], :class => "action create btn btn-success"
