--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,4 @@
 /*
 *= require_self
-*= require master
-*= require plupload/jquery.plupload.queue/css/jquery.plupload.queue
+*= require themes/bootstrap/app_bootstrap
 */
