--- a/app/views/layouts/admin/admin.html.haml
+++ b/app/views/layouts/admin/admin.html.haml
@@ -3,7 +3,7 @@
   %head{:lang => "en"}
     %meta{:charset => "UTF-8"}
     %title= "#{@current_site.name.titleize} - #{yield :title}"
-    = stylesheet_link_tag "application_bootstrap"
+    = stylesheet_link_tag "application"
     = csrf_meta_tag
     :css
       body {
@@ -27,4 +27,4 @@
           #content.span9
             = yield
     #footer
-    = render :partial => 'layouts/admin/js_footer_bootstrap'
+    = render :partial => 'layouts/admin/js_footer'
