--- a/app/views/admin/articles/_content.html.haml
+++ b/app/views/admin/articles/_content.html.haml
@@ -1,19 +1,21 @@
-%li#article_content_area
-  = foldable_fieldset 'Content' do
-    %div.fields_wrap
-      %ol
-        %li.inline
-          = f.label :filter_name, "Filter<abbr title='required' class='required'>*</abbr>".html_safe
-          = f.collection_select :filter_name, Filter.all, :id, :name, {}, {:class => "page_part_filter"}
-        %li.content
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#article_content_area"}} 
+        Content
+    #article_content_area.accordion-body.collapse.in
+      .accordion-inner
+        = f.label :filter_name, "Filter<abbr title='required' class='required'>*</abbr>".html_safe
+        = f.collection_select :filter_name, Filter.all, :id, :name, {}, {:class => "page_part_filter"}
+        .content
           %p.label_for.ace_label Subheading
-          %pre#article_subheading_content= @article.subheading
-        %li.content_submit
+          %pre#article_subheading_content.span8= @article.subheading
+        .content_submit
           = f.label :subheading
           = f.text_area :subheading, :class => "code"
-        %li.content
+        .content
           %p.label_for.ace_label Content
-          %pre#article_content= @article.content
-        %li.content_submit
+          %pre#article_content.span8= @article.content
+        .content_submit
           = f.label :content
           = f.text_area :content, :class => "code"
