--- a/app/views/admin/articles/_form.html.haml
+++ b/app/views/admin/articles/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for([:admin, @article_collection, @article], :html => {:class => "site_prop", :autocomplete => :off}) do |f|
-  %ol.form_fields
+  .form_fields
     = render :partial => "shared/error_messages", :locals => { :target => @article }
     = render :partial => 'form_general', :locals => { :f => f, :button_label => button_label }
     = render :partial => 'content', :locals => { :f => f, :button_label => button_label }
