--- a/app/views/admin/articles/edit.html.haml
+++ b/app/views/admin/articles/edit.html.haml
@@ -1,10 +1,15 @@
 - header_content 'shared/header_wrapper', :object => @article do
   - if can? :destroy, @article
-    %div{:id => "delete_article", :class => "delete"}
-      = link_to "Delete Article", [:admin, @article_collection, @article], :data => { :confirm => "Are you sure you want to delete the article #{@article.title}" }, :method => :delete, :class => "action delete"
+    %div{:id => "delete_article", :class => "delete pull-right"}
+      = link_to "Delete Article", [:admin, @article_collection, @article], :data => { :confirm => "Are you sure you want to delete the article #{@article.title}" }, :method => :delete, :class => "action delete btn btn-danger"
 
 - inner_content "shared/inner_wrapper" do
   %div.breadcrumb
     = link_to "&laquo; #{@article_collection.name.titleize} Collection".html_safe, [:admin, @article_collection]
 
   = render :partial => "form",:locals => { :button_label => "Update Article" }
+
+:javascript
+  $(document).ready(function() {
+    $('h2').append('#delete_article');
+  });
