--- a/app/views/admin/articles/_advanced_options.html.haml
+++ b/app/views/admin/articles/_advanced_options.html.haml
@@ -1,19 +1,22 @@
-%li#advanced_fields
-  = foldable_fieldset 'Advanced Options' do
-    %div.fields_wrap
-      %ol
-        %li
-          = f.label :permalink
-          = f.text_field :permalink
-        %li
-          = f.label :tags
-          = f.text_field :tags
-        %li
-          = f.label :img_url, "Associated Image URL for Article"
-          = f.text_field :img_url
-        %li
-          %p.label_for Associated Date for Article
-          = f.datetime_select :date
-        %li.inline 
-          = f.label :set_date, "Set the date time for this article"
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#advanced_fields"}} 
+        Advanced Options
+    #advanced_fields.accordion-body.collapse
+      .accordion-inner
+        = f.label :permalink
+        = f.text_field :permalink
+
+        = f.label :tags
+        = f.text_field :tags
+
+        = f.label :img_url, "Associated Image URL for Article"
+        = f.text_field :img_url
+
+        %p.label_for Associated Date for Article
+        = f.datetime_select :date
+
+        = f.label :set_date, :class => "checkbox" do
           = f.check_box :set_date
+          Set the date time for this article
