--- a/app/views/admin/articles/_form_general.html.haml
+++ b/app/views/admin/articles/_form_general.html.haml
@@ -1,17 +1,19 @@
-%li#general_fields
-  = foldable_fieldset 'General' do
-    %div.fields_wrap
-      %ol
-        %li
-          = f.label :title, "Title<abbr title='required' class='required'>*</abbr>".html_safe
-          = f.text_field :title
-        %li{:class => "inline"}
-          = f.label "layout_id", "Layout"
-          = f.collection_select :layout_id, Layout.all_from_current_site(@current_site), :id, :name, {:include_blank => true}
-          %p Leave this blank to use the layout specified in the article collection properties. Selecting a layout will override the layout for the collection.
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+        General
+    #general_fields.accordion-body.collapse.in
+      .accordion-inner
+        = f.label :title, "Title<abbr title='required' class='required'>*</abbr>".html_safe
+        = f.text_field :title
+
+        = f.label "layout_id", "Layout"
+        = f.collection_select :layout_id, Layout.all_from_current_site(@current_site), :id, :name, {:include_blank => true}
+        %span.help-block Leave this blank to use the layout specified in the article collection properties. Selecting a layout will override the layout for the collection.
+      
         = f.fields_for :current_state do |builder|
-          %li{:class => "inline"}
-            = builder.label "name", "Status<abbr title='required' class='required'>*</abbr>".html_safe
-            = builder.collection_select :name, CurrentState.all, :id, :name
-          %li
-            = builder.hidden_field :id
+          = builder.label "name", "Status<abbr title='required' class='required'>*</abbr>".html_safe
+          = builder.collection_select :name, CurrentState.all, :id, :name
+        
+          = builder.hidden_field :id
