--- a/app/views/admin/articles/_form_submit.html.haml
+++ b/app/views/admin/articles/_form_submit.html.haml
@@ -1,4 +1,3 @@
-%li#submit_fields
-  %fieldset
-    = f.submit button_label, :class => "submit"
-    = link_to "Cancel", [:admin, @article_collection, :articles], :class => "cancel"
+#submit_fields.form-actions
+  = f.submit button_label, :class => "submit span3 btn btn-success"
+  = link_to "Cancel", [:admin, @article_collection, :articles], :class => "cancel"
