--- a/app/assets/stylesheets/themes/bootstrap/moustache_components.scss
+++ b/app/assets/stylesheets/themes/bootstrap/moustache_components.scss
@@ -148,6 +148,17 @@ ol.pages li em.sortable_list {
   float: left;
 }
 
+// No resources
+
+.add_some {
+  text-align: center;
+  margin: 50px 0 0 0;
+
+  a {
+    font-size: 30px;
+  }
+}
+
 // Spinner
 
 .spinner.hidden {
