--- a/app/views/admin/authors/edit.html.haml
+++ b/app/views/admin/authors/edit.html.haml
@@ -7,3 +7,8 @@
 
   = render :partial => 'form',  
            :locals => { :button_label => 'Update Author' }
+
+:javascript
+  $(document).ready(function() {
+    $('h2').append('#delete_author');
+  });
