--- a/app/views/admin/authors/_form_general_fields.html.haml
+++ b/app/views/admin/authors/_form_general_fields.html.haml
@@ -1,33 +1,38 @@
-= foldable_fieldset 'General' do
-  %ol.form_fields
-    %li
-      = f.label :prefix
-      = f.text_field :prefix
-    %li
-      = f.label :firstname, "Firstname<abbr title='required' class='required'>*</abbr>".html_safe
-      = f.text_field :firstname
-    %li
-      = f.label :middlename
-      = f.text_field :middlename
-    %li
-      = f.label :lastname, "Lastname<abbr title='required' class='required'>*</abbr>".html_safe
-      = f.text_field :lastname
-    %li
-      = f.label :image, "Author Photo<abbr title='required' class='required'>*</abbr>".html_safe
-      = f.file_field :image, :class => "file_field"
-      = f.hidden_field :image_cache
-    - if !@author.new_record?
-      %li 
-        %h5 Current Author Image
-        %span= "#{@author.image.file.filename} is available"
-        = link_to 'here', "#{@author.image.url}"
-      %li
-        %h5 Current Author Image with MD5 Hash 
-        %span= "#{@author.filename_md5} is available"
-        = link_to 'here', "#{@author.url_md5}"
-    %li
-      = f.label :profile
-      = f.text_area :profile, :cols => '80'
-    %li
-      = f.submit button_label, :class => "submit"
-      = link_to "Cancel", [:admin, :layouts], :class => "cancel" 
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+        General
+    #general_fields.accordion-body.collapse.in
+      .accordion-inner
+        = f.label :prefix
+        = f.text_field :prefix
+
+        = f.label :firstname, "Firstname<abbr title='required' class='required'>*</abbr>".html_safe
+        = f.text_field :firstname
+
+        = f.label :middlename
+        = f.text_field :middlename
+
+        = f.label :lastname, "Lastname<abbr title='required' class='required'>*</abbr>".html_safe
+        = f.text_field :lastname
+
+        = f.label :image, "Author Photo<abbr title='required' class='required'>*</abbr>".html_safe
+        = f.file_field :image, :class => "file_field"
+        = f.hidden_field :image_cache
+
+        - if !@author.new_record?
+          %h5 Current Author Image
+          %span= "#{@author.image.file.filename} is available"
+          = link_to 'here', "#{@author.image.url}"
+
+          %h5 Current Author Image with MD5 Hash 
+          %span= "#{@author.filename_md5} is available"
+          = link_to 'here', "#{@author.url_md5}"
+
+        = f.label :profile
+        = f.text_area :profile, :class => "span6"
+
+        #submit_fields.form-actions
+          = f.submit button_label, :class => "submit btn btn-success"
+          = link_to "Cancel", [:admin, :authors], :class => "cancel" 
