--- a/app/views/shared/_header_button_delete.html.haml
+++ b/app/views/shared/_header_button_delete.html.haml
@@ -1,2 +1,2 @@
-%div{:id => "delete_#{class_name}", :class => "delete"}
-  = link_to "Delete #{title}", [:admin, parent, object], :data => { :confirm => "Are you sure you want to delete the #{class_name} #{view_identifier(object)}", :method => :delete, :class => "action delete btn btn-danger" }
+%div{:id => "delete_#{class_name}", :class => "delete pull-right"}
+  = link_to "Delete #{title}", [:admin, parent, object], :data => { :confirm => "Are you sure you want to delete the #{class_name} #{view_identifier(object)}", :method => :delete, :class => "action delete" }, :class => "btn btn-danger"
