--- a/app/views/admin/asset_collections/_submenu.html.haml
+++ b/app/views/admin/asset_collections/_submenu.html.haml
@@ -1,16 +1,16 @@
 - if can? :create, SiteAsset
-  %div{:id => "new_site_asset", :class => "actions" }
-    %ul.submenu
-      %li.top_menu
-        Actions<span class="action_arrow"></span>
-        %ul 
-          - if can? :create, @asset_collection
-            %li
-              = link_to "New Assets", [:new, :admin, @asset_collection, :site_asset]
-          - if can? :update, @asset_collection
-            %li
-              = link_to "Edit Collection Props", [:edit, :admin, @asset_collection]
-          - if can? :destroy, @asset_collection
-            %li
-              = link_to "Delete Collection", [:admin, @asset_collection], :data => { :confirm => "Are you sure you want to delete the asset collection #{@asset_collection.name}" }, :method => :delete
- 
+  %div{:id => "new_site_asset", :class => "actions pull-right" }
+    .btn-group
+      %a.btn.dropdown-toggle{:data => {:toggle => "dropdown", :target => "#"}}
+        Actions 
+        <span class="caret"></span>
+      %ul.dropdown-menu(role="menu" aria-labelledby="dMenu")
+        - if can? :create, @asset_collection
+          %li
+            = link_to "New Assets", [:new, :admin, @asset_collection, :site_asset]
+        - if can? :update, @asset_collection
+          %li
+            = link_to "Edit Collection Props", [:edit, :admin, @asset_collection]
+        - if can? :destroy, @asset_collection
+          %li
+            = link_to "Delete Collection", [:admin, @asset_collection], :data => { :confirm => "Are you sure you want to delete the asset collection #{@asset_collection.name}" }, :method => :delete
