--- a/app/views/admin/site_assets/_site_asset.html.haml
+++ b/app/views/admin/site_assets/_site_asset.html.haml
@@ -1,8 +1,6 @@
-%li.img_thumb 
-  = link_to image_tag(@site_asset.asset.url, :class => "site_asset_thumb"), "http://#{request.host}#{@site_asset.asset.url}"
-%li
-  %span= "Filename "
+.img_thumb 
+  %label= "Filename "
   = link_to "#{@site_asset.asset.file.filename}", "http://#{request.host}#{@site_asset.asset.url}"
-%li
-  %span= "Filename with MD5 fingerprint "
+
+  %label= "Filename with MD5 fingerprint "
   = link_to "#{@site_asset.filename_md5}", "http://#{request.host}#{@site_asset.url_md5}"
