--- a/app/views/admin/snippets/_form_general_fields.html.haml
+++ b/app/views/admin/snippets/_form_general_fields.html.haml
@@ -1,17 +1,23 @@
-= foldable_fieldset 'General' do
-  %ol.form_fields
-    %li
-      = f.label :name
-      = f.text_field :name
-    %li
-      = f.label :filter_name
-      = f.collection_select :filter_name, Filter.all, :id, :name
-    %li.content
-      = render :partial => 'shared/ace_editor', :locals => { :asset => @snippet.content, :builder => nil }
-    %li.content_submit
-      = f.label :content
-      = f.text_area :content, :cols => "100", :class => "code"
-    %li
-      = f.submit button_label, :class => "submit"
-      = f.submit "Save and Continue Editing", :class => "submit"
-      = link_to "Cancel", [:admin, :snippets], :class => "cancel"
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+        General
+    #general_fields.accordion-body.collapse.in
+      .accordion-inner
+        = f.label :name
+        = f.text_field :name
+
+        = f.label :filter_name
+        = f.collection_select :filter_name, Filter.all, :id, :name
+        .content
+          = render :partial => 'shared/ace_editor', :locals => { :asset => @snippet.content, :builder => nil }
+
+        .content_submit
+          = f.label :content
+          = f.text_area :content, :class => "span6", :class => "code"
+
+        #submit_fields.form-actions
+          = f.submit button_label, :class => "submit btn btn-success"
+          = f.submit "Save and Continue Editing", :class => "submit btn btn-success"
+          = link_to "Cancel", [:admin, :snippets], :class => "cancel"
