--- a/app/views/admin/theme_assets/_form_general_fields.html.haml
+++ b/app/views/admin/theme_assets/_form_general_fields.html.haml
@@ -1,11 +1,13 @@
-%li#general_fields
-  = foldable_fieldset 'General' do
-    %div.fields_wrap
-      %ol 
-        %li
-          = f.label :name, "Name"
-          = f.text_field :name
-        %li
-          = f.label :description
-          = f.text_area :description, :cols => "50", :rows => "3"   
+.accordion
+  .accordion-group
+    .accordion-heading
+      %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+        General
+    #general_fields.accordion-body.collapse.in
+      .accordion-inner
+        = f.label :name, "Name"
+        = f.text_field :name
+
+        = f.label :description
+        = f.text_area :description, :class => "span6", :rows => "3"   
 
