--- a/app/views/admin/theme_assets/_form_submit.html.haml
+++ b/app/views/admin/theme_assets/_form_submit.html.haml
@@ -1,3 +1,3 @@
-%li#form_submit_fields
-  = f.submit button_label, :class => "submit"
+#form_submit_fields.form-actions
+  = f.submit button_label, :class => "submit btn btn-success"
   = link_to "cancel", [:admin, @theme_collection, :theme_assets], :class => "cancel"
