--- a/app/views/admin/theme_collections/_form.html.haml
+++ b/app/views/admin/theme_collections/_form.html.haml
@@ -1,11 +1,15 @@
 = form_for([:admin, @theme_collection], :html => {:class => "site_prop", :autocomplete => "off" }) do |f|
   = render :partial => "shared/error_messages", 
            :locals => { :target => @theme_collection }    
-  = foldable_fieldset 'General' do
-    %ol.form_fields
-      %li
-        = f.label :name
-        = f.text_field :name 
-      %li
-        = f.submit button_label, :class => "submit"
-        = link_to "Cancel", [:admin, :theme_collections], :class => "cancel"
+  .accordion
+    .accordion-group
+      .accordion-heading
+        %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#general_fields"}} 
+          General
+      #general_fields.accordion-body.collapse.in
+        .accordion-inner
+          = f.label :name
+          = f.text_field :name 
+          #submit_fields.form-actions
+            = f.submit button_label, :class => "submit btn btn-success"
+            = link_to "Cancel", [:admin, :theme_collections], :class => "cancel"
