--- a/app/views/admin/users/_index_table.html.haml
+++ b/app/views/admin/users/_index_table.html.haml
@@ -1,8 +1,9 @@
-%table{:class => "info users"}
-  %tr
-    %th Name
-    %th Username
-    %th Role
-    %th Delete User
-  = render @users.asc(:firstname, :lastname)
-
+%table.table.table-hover.users
+  %thead
+    %tr
+      %th Name
+      %th Username
+      %th Role
+      %th Delete User
+  %tbody
+    = render @users.asc(:firstname, :lastname)
