--- a/app/views/admin/users/_password_form.html.haml
+++ b/app/views/admin/users/_password_form.html.haml
@@ -1,18 +1,21 @@
 = form_for([:admin, @user], :html => {:class => "site_prop", :autocomplete => :off}) do |f|
   = render :partial => 'shared/error_messages', :locals => { :target => @user }
 
-  %fieldset
-    = foldable_fieldset 'Change Password' do
-      %ul.form_fields
-        %li
+  .accordion
+    .accordion-group
+      .accordion-heading
+        %a.accordion-toggle{:data => {:toggle => "collapse", :target => "#change_password_fields"}} 
+          Change Password
+      #change_password_fields.accordion-body.collapse.in
+        .accordion-inner
           = f.label :current_password, 'Enter Your Current Password to Confirm Your Changes'
           = f.password_field :current_password
-        %li
+
           = f.label :password, 'New Password'
           = f.password_field :password
-        %li
+
           = f.label :password_confirmation, 'Confirm New Password'
           = f.password_field :password_confirmation
-        %li
-          = f.submit button_label, :class => "submit"
-          = link_to "Cancel", [:admin, :users], :class => "cancel"
+          #submit_fields.form-actions
+            = f.submit button_label, :class => "submit btn btn-success"
+            = link_to "Cancel", [:admin, :users], :class => "cancel"
